<resources>
    <string name="app_name">lab_2</string>
    <string name="hello_world">Hello World</string>
    <string name="button_text">I\'m a button!</string>
    <string name="textview_label">I love Android</string>
    <string name="button_press">PRESS ME</string>
    <string name="checkbox_text">Check this out!</string>
    <string name="switch_text">Switch on/off</string>
    <string name="edittext_hint">I love Android</string>
    <string name="toast_message">Label has been updated.</string>
    <string name="flag">flag_usa</string>
    <string name="flag_description">Switch language</string>
    <string name="snack_bar">The checkbox is now</string>
    <string name="checkbox_on">On</string>
    <string name="checkbox_off">Off</string>
    <string name="undo">Undo</string>
    <string name="todo">TODO</string>

</resources>