<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_label"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="192dp"
        android:layout_height="121dp"
        android:contentDescription="@string/flag"
        android:src="@drawable/flag_usa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="180dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="77dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="373dp"
        android:layout_height="42dp"
        android:autofillHints="name"
        android:hint="@string/edittext_hint"
        android:inputType="text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="260dp" />

</androidx.constraintlayout.widget.ConstraintLayout>




